<resources>
    <string name="app_name">Calculate_Costs</string>
    <string name="calculateTotal">Calculate Total</string>
    <string name="totalCost">Total Cost: $0.00</string>
    <string name="transport">Transportation</string>
    <string name="hotels">Hotels</string>
    <string name="meals">Meals</string>
    <string name="activities">Activities</string>
    <string name="expense">Enter Your Expenses</string>
</resources>